--- a/_config.yml
+++ b/_config.yml
@@ -22,21 +22,20 @@ repository               : "HenriArno/HenriArno.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Henri Arno"
+  pronouns         : # example: ""  
+  bio              : "PhD candidate working on data-driven decision support"
+  location         : "Ghent, Belgium"
+  employer         : "Ghent University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "henri.arno@ugent.be" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=ce8BmFgAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-3912-5383"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
