--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://be.linkedin.com/in/henri-arno-0098b3174"
+  linkedin         : "henri-arno-0098b3174"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
