--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "Henri Arno.jpg"
   name             : "Henri Arno"
-  bio              : "PhD candidate working on data-driven decision support"
+  bio              : "PhD candidate working on data-driven decision support at Ghent University"
   location         : "Ghent, Belgium"
   employer         : "Ghent University"
   email            : "henri.arno@ugent.be" 
