--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "Teaching and Talks"
+  - title: "Talks and Teaching"
     url: /teachingandtalks/
 
     
